# trashy-xml

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
proptest-regressions/: lib.txt
sample_files/: large.xml  medium.xml  small.xml
src/: lexer.rs  lib.rs  main.rs  tokens.rs
tests/: tests.proptest-regressions  tests.rs
