[package]
name = "trashy-xml"
version = "0.8.0"
authors = ["Andreas Strømberg<andreas.stromberg90@gmail.com>"]
description = "Less than stellar xml parser, but does what I need in a \"simple\" way"
edition = "2018"

documentation = "https://docs.rs/trashy-xml"
repository = "https://github.com/Stromberg90/trashy-xml"

readme = "README.md"
keywords = ["xml", "parser"]
categories = ["parsing", "text-processing"]
license = "MIT"
include = ["src/lib.rs", "LICENSE", "README.md", "sample_files"]

[dependencies]
smartstring = "0.2.4"

[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3.3"

[[bench]]
name = "benchmarks"
harness = false
