[package]
name = "trashy-xml"
version = "0.10.0"
authors = ["Andreas Strømberg<andreas.stromberg90@gmail.com>"]
description = "Xml parser that does not stop parsing when encountering errors."
edition = "2018"

documentation = "https://docs.rs/trashy-xml"
repository = "https://github.com/Stromberg90/trashy-xml"

readme = "README.md"
keywords = ["xml", "parser"]
categories = ["parsing", "text-processing"]
license = "MIT"
include = ["src/lib.rs", "LICENSE", "README.md", "sample_files"]

[dependencies]
rustc-hash = "1.1.0"
mimalloc = "0.1.25"
lazy_static = "1.4.0"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.4"

[[bench]]
path = "benches/benchmarks.rs"
name = "benchmarks"
harness = false