[package]
name = "trashy-xml"
version = "0.12.0"
authors = ["Andreas Strømberg<andreas.stromberg90@gmail.com>"]
description = "Xml parser that does not stop parsing when encountering errors."
edition = "2021"

documentation = "https://docs.rs/trashy-xml"
repository = "https://github.com/Stromberg90/trashy-xml"

readme = "README.md"
keywords = ["xml", "parser"]
categories = ["parsing", "text-processing"]
license = "MIT"
include = [
    "src/lib.rs",
    "src/tokens.rs",
    "src/lexer.rs",
    "LICENSE",
    "README.md",
]

[dependencies]
rustc-hash = "1.1.0"
mimalloc = { version = "0.1", default-features = false }
lazy_static = "1.4.0"
indexmap = "1.9.1"
fnv = "1.0.7"

[dev-dependencies]
proptest = "1.0.0"
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
path = "benches/benchmarks.rs"
name = "benchmarks"
harness = false

[profile.bench]
debug = true
